# DarknessSpeckleSuppression

./: .gitignore  CMakeLists.txt  Makefile  speckNullConfig.info
darkness_simulation/: darkness_simulation.py  mkidSimScript.py  mkid_processing.py
include/: .ImageGrabber.h.swp  Calibrator.h  ImageGrabber.h  ImageGrabberSim.h  P3KCom.h  P3KComFast.h  Speckle.h  SpeckleKF.h  SpeckleNuller.h  SpeckleNullerKF.h  darknessParams.h  dmTools.h  imageTools.h  params.h  simInterfaceTools.h
pythonCode/: loadP3KActMap.py  loadP3KMatlabFiles.py  makeBadPixMask.py  makeFlatCalFile.py
sim/: .PacketMasterSim.cpp.swp  PacketMasterSim.cpp
src/: .SpeckleDestruction.cpp.swp  Calibrator.cpp  ImageGrabber.cpp  ImageGrabberSim.cpp  P3KCom.cpp  P3KComFast.cpp  Speckle.cpp  SpeckleDestruction.cpp  SpeckleKF.cpp  SpeckleNuller.cpp  SpeckleNullerKF.cpp  dmTools.cpp  imageTools.cpp  simInterfaceTools.cpp
